# paycek-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  requirements.txt
python/: README.md  pyproject.toml
python/paycek.egg-info/: PKG-INFO
src/: paycek.py
