[project]
name = "paycek"
version = "1.0.0"
authors = [
    { name = "Electrocoin d.o.o." },
]
description = "A connector library for communicating with PayCek public API"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/electrocoin-eu/python"
"Bug Tracker" = "https://github.com/electrocoin-eu/python/issues"